Add remove button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="crayon-box">{{ cart.length }}</div>
 
-      <draw-display @add-to-cart="updateCart"></draw-display>
+      <draw-display @add-to-cart="updateCart" @remove-to-cart="removeCart"></draw-display>
     </div>
 
 
